kantin-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-kantin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-api
        image: imamaziz/kantin-backend:latest # Sesuaikan dengan Docker Hub kamu
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        # --- IDENTITY INJECTION START ---
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-kantin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-ui
        # PENTING: Gunakan format username/image agar Jenkins bisa push/pull
        image: imamaziz/kantin-frontend:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
# --- INGRESS RESOURCE START ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kantin-ingress
  annotations:
    # Menggunakan Ingress Nginx (standar di AKS)
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
# --- INGRESS RESOURCE END ---
